# tiny_simgrid

./: .gitignore  .travis.yml  CMakeCache.txt  CMakeLists.txt  Makefile  Simulation.cpp  TheAnh-proto.files  UnfoldingChecker.cpp  UnfoldingChecker.hpp  UnfoldingEvent.cpp  cmake_install.cmake  main_include.hpp  prototype_git  prototype_git.cbp  sonar-project.properties  test.cpp  units
.circleci/: config.yml
.cmake/api/v1/reply/: cache-v2-8f8597da2099212ac3e4.json  cache-v2-c2a7be37645f482d74e6.json  cmakeFiles-v1-34f0b8829acc17a8345d.json  codemodel-v2-0ac6c317554d0106e05c.json  codemodel-v2-d4a0fce624f63f3b7e9d.json  index-2020-06-19T18-18-38-0513.json  index-2020-06-22T17-38-24-0715.json  target-prototype_git-Debug-b87e7a88b7df923d22d4.json  target-tiny_simgrid-Debug-d9b89a78bc7fb581a350.json
benchmarks/: masterSlaver.c
src/: Simulation.cpp  UnfoldingChecker.cpp  UnfoldingChecker.hpp  include.hpp  main.cpp  main_include.hpp  test.cpp
src/Api/: CheckerSide.hpp  ModelChecker.cpp  ModelChecker.h  RemoteSimulation.cpp  RemoteSimulation.hpp
src/App/: Actor.cpp  Actor.h  Actor_Manager.cpp  Actor_Manager.h  AppSide.cpp  AppSide.h  AppState.cpp  AppState.h  Config.hpp  Config__.hpp  Mailbox.cpp  Mailbox.h  StateManager.cpp  StateManager.h  Transition.cpp  Transition.h  Transition_Manager.cpp  Transition_Manager.h
src/EventSet/: EventSet.cpp  EventSet.h  eventset.cpp  eventset.h
src/Unfolding/: Checker.hpp  CheckerSide.cpp  CheckerSide.h  Configuration.cpp  Configuration.h  EventSet.cpp  EventSetNew.cpp  EventSetNew.h  Global.cpp  Global.hpp  State.cpp  State.h  Transition.cpp  UnfoldingChecker.cpp  UnfoldingChecker.h  UnfoldingEvent.cpp  UnfoldingEvent.h
src/UnfoldingChecker/: UnfoldingChecker.cpp  UnfoldingChecker.h
src/UnfoldingEvent/: UnfoldingEvent.cpp  UnfoldingEvent.h  unfoldingevent.cpp  unfoldingevent.h
src/actor/: actor.h
src/api/: CheckerSide.cpp  CheckerSide.hpp  ModelChecker.cpp  ModelChecker.h  RemoteSimulation.cpp  RemoteSimulation.hpp  Session.cpp  Session.h  forward.hpp  modelchecker.cpp  modelchecker.h  modelcheckerapi.cpp  modelcheckerapi.h
src/app/: AppSide.cpp  AppSide.h  actor.cpp  actor.h  app_include.hpp  mailbox.cpp  mailbox.h  main_include.hpp
src/attic/: State.cpp  State.h
src/configuration/: configuration.cpp  configuration.h
src/mailbox/: mailbox.cpp  mailbox.h
src/state/: state.cpp  state.h
src/transition/: transition.cpp
src/unfolding/: Checker.cpp  Checker.h  EventSet.cpp  EventSet.h  UnfoldingChecker.cpp  UnfoldingChecker.h  UnfoldingEvent.cpp  UnfoldingEvent.h  configuration.cpp  configuration.h  state.cpp  state.h  transition.cpp  transition.h
tsg_old/: Simulation.cpp  UnfoldingEvent.cpp  tsg_old.pro
